<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginPageVM" type="com.elibrarysapplication.app.modules.loginpage.data.viewmodel.LoginPageVM"/>
    </data>
    <FrameLayout android:id="@+id/frameStacklogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameLoginpage"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent" style="@style/groupStylewhite_A700">
            <FrameLayout android:id="@+id/frameStackimg0qq31fxpxone"
                android:layout_gravity="start"
                android:layout_height="@dimen/_640pxv"
                android:layout_marginBottom="@dimen/_3pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageImg0qq31fxpxOne"
                    android:layout_gravity="start"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_img0qq31fxpx1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_img0qq31fxpx1"/>
                <FrameLayout android:id="@+id/frameStackscreenshot2023"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_60pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent" style="@style/groupStylegray_900">
                    <ImageView android:id="@+id/imageScreenshot2023"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_marginHorizontal="@dimen/_15pxh"
                        android:layout_marginVertical="@dimen/_15pxv"
                        android:layout_width="@dimen/_74pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_screenshot2023"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_screenshot2023"/>
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/linearColumn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearColumnlogin"
                        style="@style/groupStyleblack_900_b2cornerRadius"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_74pxh"
                        android:layout_marginTop="@dimen/_173pxv"
                        android:layout_marginEnd="@dimen/_74pxh"
                        android:layout_marginBottom="@dimen/_172pxv"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtLogin"
                            style="@style/txtSansSerifCollection20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/_15pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_marginEnd="@dimen/_15pxh"
                            android:text="@{loginPageVM.loginPageModel.txtLogin}"
                            tools:text="@string/lbl_login" />

                        <TextView
                            android:id="@+id/txtEmail"
                            style="@style/txtSansSerifCollection10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15pxh"
                            android:layout_marginTop="@dimen/_4pxv"
                            android:layout_marginEnd="@dimen/_15pxh"
                            android:text="@{loginPageVM.loginPageModel.txtEmail}"
                            tools:text="@string/lbl_email" />

                        <View
                            android:id="@+id/lineLineThree"
                            android:layout_width="@dimen/_184pxh"
                            android:layout_height="@dimen/_2pxv"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/_15pxh"
                            android:layout_marginTop="@dimen/_8pxv"
                            android:layout_marginEnd="@dimen/_12pxh"
                            android:background="@color/white_A700" />

                        <TextView
                            android:id="@+id/txtPassword"
                            style="@style/txtSansSerifCollection10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_16pxh"
                            android:layout_marginTop="@dimen/_13pxv"
                            android:layout_marginEnd="@dimen/_16pxh"
                            android:text="@{loginPageVM.loginPageModel.txtPassword}"
                            tools:text="@string/lbl_password" />

                        <View
                            android:id="@+id/lineLineFour"
                            android:layout_width="@dimen/_180pxh"
                            android:layout_height="@dimen/_2pxv"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/_15pxh"
                            android:layout_marginTop="@dimen/_7pxv"
                            android:layout_marginEnd="@dimen/_15pxh"
                            android:background="@color/white_A700" />

                        <LinearLayout
                            android:id="@+id/linearColumnforgetpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15pxh"
                            android:layout_marginTop="@dimen/_5pxv"
                            android:layout_marginEnd="@dimen/_11pxh"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/linearRowforgetpassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_1pxh"
                                android:gravity="start"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txtForgetPassword"
                                    style="@style/txtSansSerifCollection10_1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.54"
                                    android:text="@{loginPageVM.loginPageModel.txtForgetPassword}"
                                    tools:text="@string/msg_forget_password" />

                                <View
                                    android:id="@+id/viewRectangleFifteen"
                                    android:layout_width="@dimen/_6pxh"
                                    android:layout_height="@dimen/_7pxh"
                                    android:layout_marginStart="@dimen/_24pxh"
                                    android:layout_marginTop="@dimen/_8pxv"
                                    android:layout_marginBottom="@dimen/_9pxv"
                                    android:background="@drawable/rectangle_bg_bluegray_100_radius_1" />

                                <TextView
                                    android:id="@+id/txtShowpassword"
                                    style="@style/txtSansSerifCollection9"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_1pxh"
                                    android:layout_marginTop="@dimen/_1pxv"
                                    android:layout_marginBottom="@dimen/_1pxv"
                                    android:layout_weight="0.42"
                                    android:text="@{loginPageVM.loginPageModel.txtShowpassword}"
                                    tools:text="@string/lbl_show_password" />
                            </LinearLayout>

                            <FrameLayout
                                android:id="@+id/frameStackrectanglefourteen"
                                android:layout_width="@dimen/_180pxh"
                                android:layout_height="@dimen/_33pxv"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/_4pxv"
                                android:layout_marginEnd="@dimen/_5pxh">

                                <View
                                    android:id="@+id/viewRectangleFourteen"
                                    android:layout_width="@dimen/_180pxh"
                                    android:layout_height="@dimen/_32pxv"
                                    android:layout_gravity="start"
                                    android:layout_marginBottom="@dimen/_1pxv"
                                    android:background="@drawable/rectangle_bg_indigo_300_radius_10" />

                                <TextView
                                    android:id="@+id/txtLoginOne"
                                    style="@style/txtSansSerifCollection12"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom|center"
                                    android:layout_marginStart="@dimen/_73pxh"
                                    android:layout_marginTop="@dimen/_10pxv"
                                    android:layout_marginEnd="@dimen/_73pxh"
                                    android:text="@{loginPageVM.loginPageModel.txtLoginOne}"
                                    tools:text="@string/lbl_login" />
                            </FrameLayout>

                            <LinearLayout
                                android:id="@+id/linearRowlanguage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_25pxh"
                                android:layout_marginTop="@dimen/_3pxv"
                                android:layout_marginEnd="@dimen/_25pxh"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txtLanguage"
                                    style="@style/txtSansSerifCollection10"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_1pxv"
                                    android:layout_weight="0.74"
                                    android:ellipsize="end"
                                    android:singleLine="true"
                                    android:text="@{loginPageVM.loginPageModel.txtLanguage}"
                                    tools:text="@string/msg_don_t_have_acco" />

                                <TextView
                                    android:id="@+id/txtSignup"
                                    style="@style/txtSansSerifCollection10_2"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_4pxh"
                                    android:layout_marginTop="@dimen/_1pxv"
                                    android:layout_weight="0.26"
                                    android:ellipsize="end"
                                    android:singleLine="true"
                                    android:text="@{loginPageVM.loginPageModel.txtSignup}"
                                    tools:text="@string/lbl_signup" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

        </FrameLayout>
    </FrameLayout>
</layout>
